# HandDetection

./: CMakeLists.txt  Features.txt  Plan.txt  Readme.txt
AviCreate/: CMakeLists.txt  Makefile  imgtoavi.cpp
FullProject/: CMakeLists.txt  main.cpp
HandyDemo/: HandyDemo.sln
HandyDemo/HandyDemo/: HandyDemo.vcxproj  HandyDemo.vcxproj.filters  main.cpp
HandyMouse/: HandyMouse.sln
HandyMouse/HandyMouse/: HandyMouse.vcxproj  HandyMouse.vcxproj.filters  handymouse.cpp  handymouse.h  handymouse.qrc  handymouse.ui  main.cpp
HandyTrainer/: HandyTrainer.sln
HandyTrainer/HandyTrainer/: HandyTrainer.vcxproj  HandyTrainer.vcxproj.filters  main.cpp
apps/: CMakeLists.txt  GetFrames.cpp  HandVidDetect.cpp  VidPostureDetect.cpp  adaExtractor.cpp  adaHandExtractor.cpp  adaHandTrainer.cpp  adaTrainer.cpp  blueRemover.cpp  compositeBuilder.cpp  dataAnalyzer.cpp  extractor.cpp  fleshExtractor.cpp  fleshTrainer.cpp  handExtractor.cpp  handTrainer.cpp  handTruther.cpp  handWrapHaar.cpp  imgtovid.cpp  nonHandTruther.cpp  postureDetector.cpp  rgbExtractor.cpp  rgbTrainer.cpp  trainer.cpp
classifier/: AdaboostClassifier.cpp  AdaboostClassifier.h  BayesianClassifier.cpp  BayesianClassifier.h  CMakeLists.txt  CompositeClassifier.cpp  CompositeClassifier.h  Gaussian.cpp  Gaussian.h  GaussianMixtureModel.cpp  GaussianMixtureModel.h  Matrix.cpp  Matrix.h  RangeClassifier.cpp  RangeClassifier.h  ThresholdClassifier.cpp  ThresholdClassifier.h  WeakClassifier.cpp  WeakClassifier.h
flesh/: CMakeLists.txt  DummyFleshDetector.cpp  DummyFleshDetector.h  FleshDetector.cpp  FleshDetector.h
geometry/: CMakeLists.txt  DoublePoint.cpp  DoublePoint.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  Rect.cpp  Rect.h
hand/: CMakeLists.txt  Hand.cpp  Hand.h  HandCandidate.cpp  HandCandidate.h  HandDetector.cpp  HandDetector.h  HandyTracker.cpp  HandyTracker.h
image/: CMakeLists.txt  Color.cpp  Color.h  ColorRegion.cpp  ColorRegion.h  ConnectedRegion.cpp  ConnectedRegion.h  Image.cpp  Image.h  SubImage.cpp  SubImage.h
project/: Cylinder.cpp  Cylinder.h  Hand.cpp  Hand.h  HandWidget.cpp  HandWidget.h  ImageRoutines.cpp  ImageRoutines.h  Makefile  ProcFrames.py  VideoWidget.cpp  VideoWidget.h  WRLModel.cpp  WRLModel.h  Window.cpp  Window.h  avcodec_sample.0.4.9-fixed.cpp  blockextract.cpp  hsvextract.cpp  imagesubtract.cpp  leftHand.WRL  leftHand_bones.WRL  locations.txt  yiqextract  yiqextract.cpp
scripts/: postureScore.py
src/: BayesianClassifier.cpp  BayesianClassifier.h  CMakeLists.txt  Gaussian.cpp  Gaussian.h  GaussianMixtureModel.cpp  GaussianMixtureModel.h  Matrix.cpp  Matrix.h
test/: CMakeLists.txt  classifyTest.cpp  imageTest.cpp  loadTest.cpp  matrixTest.cpp  test.cpp  thresholdTest.cpp  trainTest.cpp
utils/: CMakeLists.txt  DirectoryUtils.cpp  DirectoryUtils.h  TimingAnalyzer.cpp  TimingAnalyzer.h
video/: CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
vidproc/: CMakeLists.txt  CMakeLists.txt.old  FleshBlockOutline.cpp  GetFrames.cpp  HandVidDetect.cpp  OutlineHand.cpp  ProcFrames.cpp  VidPostureDetect.cpp  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.h  Window.cpp  Window.h
xmlutils/: CMakeLists.txt  XMLUtils.cpp  XMLUtils.h  XMLUtils2.cpp  XMLUtils2.h
