PROJECT(HandDetection)
INCLUDE_DIRECTORIES(/usr/include/libxml2)
ADD_EXECUTABLE(dataAnalyzer dataAnalyzer.cpp)
ADD_EXECUTABLE(fleshTrainer fleshTrainer.cpp)
ADD_EXECUTABLE(fleshExtractor fleshExtractor.cpp)
ADD_EXECUTABLE(handTrainer handTrainer.cpp)
ADD_EXECUTABLE(handExtractor handExtractor.cpp)
TARGET_LINK_LIBRARIES(dataAnalyzer gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshTrainer gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshExtractor gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handTrainer hand flesh gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handExtractor hand flesh gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)