PROJECT(HandDetection)
INCLUDE_DIRECTORIES(/usr/include/libxml2)
ADD_EXECUTABLE(dataAnalyzer dataAnalyzer.cpp)
ADD_EXECUTABLE(fleshTrainer fleshTrainer.cpp)
ADD_EXECUTABLE(fleshExtractor fleshExtractor.cpp)
ADD_EXECUTABLE(handTrainer handTrainer.cpp)
ADD_EXECUTABLE(handTruther handTruther.cpp)
ADD_EXECUTABLE(nonHandTruther nonHandTruther.cpp)
ADD_EXECUTABLE(handExtractor handExtractor.cpp)
ADD_EXECUTABLE(handWrapHaar handWrapHaar.cpp)
ADD_EXECUTABLE(adaTrainer adaTrainer.cpp)
ADD_EXECUTABLE(adaExtractor adaExtractor.cpp)
TARGET_LINK_LIBRARIES(dataAnalyzer gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshTrainer gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshExtractor gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handTrainer hand flesh gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 cv)
TARGET_LINK_LIBRARIES(handTruther image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
TARGET_LINK_LIBRARIES(nonHandTruther flesh gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handExtractor hand flesh gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 cv)
TARGET_LINK_LIBRARIES(handWrapHaar hand gmm image utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 cv)
TARGET_LINK_LIBRARIES(adaTrainer gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(adaExtractor gmm image ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
