PROJECT(HandDetection)
INCLUDE_DIRECTORIES(/usr/include/libxml2)
ADD_EXECUTABLE(dataAnalyzer dataAnalyzer.cpp)
ADD_EXECUTABLE(fleshTrainer fleshTrainer.cpp)
ADD_EXECUTABLE(fleshExtractor fleshExtractor.cpp)
ADD_EXECUTABLE(blueRemover blueRemover.cpp)
ADD_EXECUTABLE(handTrainer handTrainer.cpp)
ADD_EXECUTABLE(handTruther handTruther.cpp)
ADD_EXECUTABLE(nonHandTruther nonHandTruther.cpp)
ADD_EXECUTABLE(handExtractor handExtractor.cpp)
ADD_EXECUTABLE(handWrapHaar handWrapHaar.cpp)
ADD_EXECUTABLE(adaTrainer adaTrainer.cpp)
ADD_EXECUTABLE(adaExtractor adaExtractor.cpp)
ADD_EXECUTABLE(adaHandTrainer adaHandTrainer.cpp)
ADD_EXECUTABLE(adaHandExtractor adaHandExtractor.cpp)
ADD_EXECUTABLE(compositeBuilder compositeBuilder.cpp)
ADD_EXECUTABLE(postureDetector postureDetector.cpp)
ADD_EXECUTABLE(imgtovid imgtovid.cpp)
ADD_EXECUTABLE(getframes GetFrames.cpp)
ADD_EXECUTABLE(fleshblockoutline FleshBlockOutline.cpp)
ADD_EXECUTABLE(handVidDetect HandVidDetect.cpp)
ADD_EXECUTABLE(VidPostureDetect VidPostureDetect.cpp)
TARGET_LINK_LIBRARIES(dataAnalyzer gmm image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshTrainer gmm image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(fleshExtractor gmm image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(blueRemover image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handTrainer hand flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect)
TARGET_LINK_LIBRARIES(handTruther image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
TARGET_LINK_LIBRARIES(nonHandTruther flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(handExtractor hand flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect)
TARGET_LINK_LIBRARIES(handWrapHaar hand gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect)
TARGET_LINK_LIBRARIES(adaTrainer gmm image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(adaExtractor gmm image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(adaHandTrainer hand flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(adaHandExtractor hand flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
TARGET_LINK_LIBRARIES(compositeBuilder gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(postureDetector hand flesh gmm image geometry utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2)
#TARGET_LINK_LIBRARIES(imgtovid image geometry video ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 aviplay vpx)
TARGET_LINK_LIBRARIES(imgtovid image geometry video ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} xmlutils xml2 vpx)
TARGET_LINK_LIBRARIES(getframes image geometry video ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale vpx)
TARGET_LINK_LIBRARIES(fleshblockoutline flesh image geometry video gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2 vpx)
TARGET_LINK_LIBRARIES(handVidDetect hand flesh image geometry video gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect vpx)
#TARGET_LINK_LIBRARIES(VidPostureDetect hand flesh image geometry video gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect aviplay vpx)
TARGET_LINK_LIBRARIES(VidPostureDetect hand flesh image geometry video gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2 opencv_core opencv_imgproc opencv_objdetect vpx)
