PROJECT(GMM)
ADD_EXECUTABLE(test test.cpp)
ADD_EXECUTABLE(trainTest trainTest.cpp)
ADD_EXECUTABLE(matrixTest matrixTest.cpp)
ADD_EXECUTABLE(classifyTest classifyTest.cpp)
ADD_EXECUTABLE(loadTest loadTest.cpp)
TARGET_LINK_LIBRARIES(test gmm)
TARGET_LINK_LIBRARIES(trainTest gmm)
TARGET_LINK_LIBRARIES(matrixTest gmm)
TARGET_LINK_LIBRARIES(classifyTest gmm)
TARGET_LINK_LIBRARIES(loadTest gmm)
