PROJECT(HandDetection)
INCLUDE_DIRECTORIES(/usr/include/libxml2)
ADD_EXECUTABLE(test test.cpp)
ADD_EXECUTABLE(trainTest trainTest.cpp)
ADD_EXECUTABLE(matrixTest matrixTest.cpp)
ADD_EXECUTABLE(classifyTest classifyTest.cpp)
ADD_EXECUTABLE(loadTest loadTest.cpp)
ADD_EXECUTABLE(imageTest imageTest.cpp)
ADD_EXECUTABLE(thresholdTest thresholdTest.cpp)
TARGET_LINK_LIBRARIES(test gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(trainTest gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(matrixTest gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(classifyTest gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(loadTest gmm xmlutils xml2)
TARGET_LINK_LIBRARIES(imageTest image geometry cv highgui ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
TARGET_LINK_LIBRARIES(thresholdTest gmm xmlutils xml2)
