PROJECT(HandDetection)
INCLUDE_DIRECTORIES(/usr/include/libxml2)
ADD_EXECUTABLE(getframes GetFrames.cpp VideoDecoder.cpp)
ADD_EXECUTABLE(fleshblockoutline FleshBlockOutline.cpp VideoDecoder.cpp)
ADD_EXECUTABLE(handVidDetect HandVidDetect.cpp VideoDecoder.cpp)
TARGET_LINK_LIBRARIES(getframes image geometry ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale)
TARGET_LINK_LIBRARIES(fleshblockoutline flesh image geometry gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2)
TARGET_LINK_LIBRARIES(handVidDetect hand flesh image geometry gmm utils ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} avformat swscale xmlutils xml2 cv)
